# Encrypted-set-based-estimation

./: .gitignore  CMakeLists.txt  ConZonoEntities.cpp  ConZonoStrips.cpp  HW  Makefile  README.md  ZonoEntities.cpp  ZonoStrips.cpp  amr_1  amr_2.cpp  amr_test.cpp  amr_test.mat  conanfile.txt  main.cpp  representations.cpp  test.csv  zvector.csv  zvector_ent.csv  zvector_long.csv  zvector_zcontEnt.csv  zvector_zcontstrips.csv
MATLAB/: amr_example_1.m  amr_example_2.m  contZono.m  plot_CZE_cppAndMat.m  plot_CZS_cppAndMat.m  plot_EKF.m  plot_ZE_cppAndMat.m  plot_ZS_cppAndMat.m  plot_snapshot.m  readcppmat.m  run_ConZono_Entities.m  run_ConZono_Strips.m  run_EKF.m  run_EKF_EKF.m  run_Zono_Entities.m  run_Zono_Strips.m  test.m  zvector.csv
MATLAB/ImgsOut/: CZE_3dloc.eps  CZE_3dloc.fig  CZE_FPerr.eps  CZE_FPerr.fig  CZE_esterr.eps  CZE_esterr.fig  CZE_x.eps  CZE_x.fig  CZE_y.eps  CZE_y.fig  CZE_z.eps  CZE_z.fig  CZS_3dloc.eps  CZS_3dloc.fig  CZS_esterr.eps  CZS_esterr.fig  CZS_x.eps  CZS_x.fig  CZS_y.eps  CZS_y.fig  CZS_z.eps  CZS_z.fig  ZE_3dloc.eps  ZE_3dloc.fig  ZE_FPerr.eps  ZE_FPerr.fig  ZE_esterr.eps  ZE_esterr.fig  ZE_x.eps  ZE_x.fig  ZE_y.eps  ZE_y.fig  ZE_z.eps  ZE_z.fig  ZS_esterr.eps  ZS_esterr.fig  ZS_y.eps  ZS_y.fig  ZS_z.eps  ZS_z.fig  (+1 more)
MATLAB/cache/: temp.mat
MATLAB/classes/: NetworkManager.m
MATLAB/utilities/: L_eign.m  intersectConZonoStrip1.m  plotConZon.m  plotZono1.m  updatePlotConZono.m
crypto/: gm.cc  gm.hh  paillier.cc  paillier.hh
crypto/math/: math_util.cc  num_th_alg.cc  prime_seq.cc
representations/: CSVReader.cpp  CSVReader.h  typedef.h
representations/ConZonotope/: ConZonotope.cpp  ConZonotope.h
representations/EncConZonotope/: EncConZonotope.cpp  EncConZonotope.h
representations/EncEntity/: EncEntity.cpp  EncEntity.h
representations/EncStrip/: EncStrip.cpp  EncStrip.h
representations/EncZonotope/: EncZonotope.cpp  EncZonotope.h
representations/Strip/: Strip.cpp  Strip.h
tests/: CustomTests.cpp  EncZonotopeTests.cpp  PaillierTests.cpp  StripTests.cpp  TestMain.cpp  TestUtils.h  ZonoEntitiesTests.cpp  ZonotopeTests.cpp
(+14 files in other folders)
